[package]
name = "node-cli"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Generic Substrate node implementation in Rust."
build = "build.rs"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
default-run = "nftmart-node"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[badges]
travis-ci = { repository = "paritytech/substrate" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "paritytech/substrate" }
is-it-maintained-open-issues = { repository = "paritytech/substrate" }

[[bin]]
name = "nftmart-node"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0" }
serde = { version = "1.0.102", features = ["derive"] }
futures = { version = "0.3.9", features = ["compat"] }
hex-literal = "0.3.1"
log = "0.4.8"
rand = "0.7.2"
structopt = { version = "0.3.8", optional = true }
parking_lot = "0.11.1"

# primitives
sp-authority-discovery = { version = "3.0.0",  git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sp-consensus-babe = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
grandpa-primitives = { version = "3.0.0", package = "sp-finality-grandpa", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sp-core = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sp-runtime = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sp-timestamp = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sp-authorship = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sp-inherents = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sp-keyring = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sp-keystore = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sp-io = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sp-consensus = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sp-transaction-pool = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sp-std = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
nftmart-traits = { path = "../../pallets/nftmart-traits" }

# client dependencies
sc-client-api = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sc-chain-spec = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sc-consensus = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sc-transaction-pool = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sc-network = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sc-consensus-slots = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sc-consensus-babe = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sc-consensus-uncles = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
grandpa = { version = "0.9.0", package = "sc-finality-grandpa", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sc-client-db = { version = "0.9.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sc-offchain = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sc-rpc = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sc-basic-authorship = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sc-service = { version = "0.9.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sc-tracing = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sc-telemetry = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sc-authority-discovery = { version = "0.9.0",  git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sc-finality-grandpa-warp-sync = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b', optional = true }

# frame dependencies
pallet-indices = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
pallet-timestamp = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
pallet-contracts = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
frame-system = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
pallet-balances = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
pallet-transaction-payment = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
frame-support = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
pallet-im-online = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
pallet-authority-discovery = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
pallet-staking = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
pallet-grandpa = { version = "3.1.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }

# node-specific dependencies
node-runtime = { version = "2.0.0", path = "../runtime" }
node-rpc = { version = "2.0.0", path = "../rpc" }
node-primitives = { version = "2.0.0", path = "../primitives" }
node-executor = { version = "2.0.0", path = "../executor" }

# CLI-specific dependencies
sc-cli = { version = "0.9.0", optional = true, git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
frame-benchmarking-cli = { version = "3.0.0", optional = true, git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
node-inspect = { version = "0.8.0", optional = true, path = "../inspect" }
try-runtime-cli = { version = "0.9.0", optional = true, git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2.73", optional = true }
wasm-bindgen-futures = { version = "0.4.18", optional = true }
libp2p-wasm-ext = { version = "0.28", features = ["websocket"], optional = true }

[target.'cfg(target_arch="x86_64")'.dependencies]
node-executor = { version = "2.0.0", path = "../executor", features = [ "wasmtime" ] }
sc-cli = { version = "0.9.0", optional = true, git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b', features = [ "wasmtime" ] }
sc-service = { version = "0.9.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b', features = [ "wasmtime" ] }
sp-trie = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b', features = ["memory-tracker"] }

[dev-dependencies]
sc-keystore = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sc-consensus = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sc-consensus-babe = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sc-consensus-epochs = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sc-service-test = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
futures = "0.3.9"
tempfile = "3.1.0"
assert_cmd = "1.0"
nix = "0.19"
serde_json = "1.0"
regex = "1"
platforms = "1.1"
async-std = { version = "1.6.5", features = ["attributes"] }
soketto = "0.4.2"

[build-dependencies]
structopt = { version = "0.3.8", optional = true }
node-inspect = { version = "0.8.0", optional = true, path = "../inspect" }
frame-benchmarking-cli = { version = "3.0.0", optional = true, git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
substrate-build-script-utils = { version = "3.0.0", optional = true, git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
substrate-frame-cli = { version = "3.0.0", optional = true, git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
try-runtime-cli = { version = "0.9.0", optional = true, git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }
sc-cli = { version = "0.9.0", optional = true, git = 'https://github.com/paritytech/substrate.git', rev = '0f5a858b' }

[features]
default = [ "cli" ]
cli = [
	"node-executor/wasmi-errno",
	"node-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/db",
	"sc-finality-grandpa-warp-sync",
	"structopt",
	"substrate-build-script-utils",
	"try-runtime-cli",
]
runtime-benchmarks = [
	"node-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"node-runtime/try-runtime",
	"try-runtime-cli",
]
